fixed double scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: rgb(46, 46, 46);
+  background-color: rgb(14, 14, 14);
 }
 /* header */
 .header-container{
@@ -12,9 +12,10 @@ html, body {
   grid-template-columns:repeat(2, 1fr) ;
   width: 100vw;
   height: 8vh;
-  background-color: black;
+  background-color: rgb(44, 43, 43);
   overflow: hidden;
   z-index: 100;
+  border-bottom: 2px solid rgb(95, 94, 94);
 }
 .header-grid{
   display: flex;
@@ -41,7 +42,7 @@ html, body {
 .name-container{
   display: flex;
   flex-wrap: wrap;
-  width: 100vh;
+
   height: 100vh;
   flex-direction: column;
   align-items: flex-start;
@@ -91,7 +92,6 @@ html, body {
   height: 200vh;
   overflow-y: scroll;
   gap: 20px;
-  background-color: rgb(46, 46, 46);
 }
 
 /* body grids */
